Finalizando desktop e mobile

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -200,6 +200,167 @@
         </div>
       </div>
     </section>
+
+    <section
+      class="main_contact"
+    >
+      <div
+        class="main_contact_content"
+      >
+        <h2
+          class="main_contact_content--title"
+        >
+          Atendimento e Comercial
+        </h2>
+
+        <span
+          class="main_contact_content--subtitle"
+        >
+          Entre em contato com a unidade:
+        </span>
+
+        <div
+          class="main_contact_content--galery"
+        >
+          <figure>
+            <img 
+              src="./assets/img/img_niteroi.png"
+              alt="Imagem do porto de Niteroi"
+            >
+
+            <figcaption>
+              Niterói
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img 
+              src="./assets/img/img_ilha_conceicao.png"
+              alt="Imagem do porto da Ilha da Conceição"
+            >
+
+            <figcaption>
+              Ilha da Conceição
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img 
+              src="./assets/img/img_santos.png"
+              alt="Imagem do porto de Santos"
+            >
+
+            <figcaption>
+              Santos
+            </figcaption>
+          </figure>
+
+          <figure>
+            <img 
+              src="./assets/img/img_caju.png"
+              alt="Imagem do porto do Caju"
+            >
+
+            <figcaption>
+              Cajú
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+
+      <div
+        class="main_contact_form"
+      >
+        <h2
+          class="main_contact_form--title"
+        >
+          Fale conosco
+        </h2>
+
+        <span
+          class="main_contact_form--subtitle"
+        >
+          Se conecte com nossos colaboradores
+        </span>
+
+        <form
+          class="main_contact_form--form"
+        >
+          <div>
+            <label for="nome">
+              Nome
+            </label>
+
+            <input
+              type="text"
+              id="nome"
+              name="nome"
+              required
+            >
+          </div>
+
+          <div>
+            <label
+              for="email"
+            >
+              Email
+            </label>
+
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+            >
+          </div>
+
+          <div>
+            <label
+              for="tel"
+            >
+              Telefone
+            </label>
+
+            <input
+              type="tel"
+              id="tel"
+              name="tel"
+              required
+            >
+          </div>
+
+          <div>
+            <label
+              for="msg"
+            >
+              Messagem
+            </label>
+
+            <textarea
+              name="msg"
+              id="msg"
+              class="main_contact_form--form-textArea"
+              required
+              rows="5"
+            ></textarea>
+          </div>
+
+          <button>
+            <span>
+              Enviar
+            </span>
+          </button>
+        </form>
+      </div>
+    </section>
   </main>
+
+  <footer
+    class="footer"
+  >
+    <span>
+      &copy; 2024 Desafio produzido para fins educativos, Escola Vai na Web.
+    </span>
+  </footer>
 </body>
 </html>
